[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pelican-theme-smallweb"
description = "SmallWeb theme for Pelican static site generator"
authors = [
    "Vitaly Potyarkin <sio.wtf@gmail.com>",
]
version = "0"
license = "Apache-2.0"
readme = "README.md"
keywords = ["blog", "pelican", "theme"]
packages = [
    { include = "pelican" },
]
include = [
    "pelican/themes/smallweb/static/css/codecolor/*.css",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]


[tool.poetry.urls]
"Issue Tracker" = "https://github.com/sio/pelican-smallweb"


[tool.poetry.dependencies]
pelican = "*"
setuptools = "*"


[tool.poetry-dynamic-versioning]
enable = true
