[metadata]
name = pelican-theme-smallweb
description = SmallWeb theme for Pelican static site generator
url = https://github.com/sio/pelican-smallweb
long_description = file: README.md
long_description_content_type = text/markdown
keywords = blog, pelican, theme
license = Apache-2.0
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License


[options]
packages = pelican
install_requires =
    pelican


[options.package_data]
* = *
